# SkiaNative

./: Directory.Build.targets  Directory.Packages.props  README.md  SkiaNative.Avalonia.slnx
.github/scripts/: checkout-avalonia.sh
.github/workflows/: ci.yml  release.yml
benchmarks/SkiaNative.Avalonia.Benchmarks/: Program.cs  SkiaNative.Avalonia.Benchmarks.csproj
eng/: bootstrap-skiasharp-pr3779.sh  build-native.sh
native/SkiaNative.Avalonia/: CMakeLists.txt
native/SkiaNative.Avalonia/include/: SkiaNativeApi.h
native/SkiaNative.Avalonia/src/: SkiaNativeApi.cpp
samples/MeshModeler.SkiaNative.Cpp/src/: main.mm
samples/MeshModeler.SkiaSharp.Uno/: MeshModeler.SkiaSharp.Uno.sln
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.Core/: MeshModelerCore.cs  Projection.cs
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Rendering/: MeshModeler.SkiaSharp.Rendering.csproj  SkiaMeshRendering.cs
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Uno/: MainPage.cs  MeshModeler.SkiaSharp.Uno.csproj  PLAN.md  ReadMe.md
samples/MeshParticles.SkiaNative.Avalonia/: App.cs  MainView.cs  MeshParticles.SkiaNative.Avalonia.csproj  Program.cs
samples/MeshParticles.SkiaNative.Avalonia/Controls/: MeshParticlesSurface.cs
samples/MeshParticles.SkiaSharp.Uno/MeshParticles.SkiaSharp.Uno/: ReadMe.md
samples/MotionMark.SkiaNative.Avalonia/: MainView.cs  MainWindowViewModel.cs  Program.cs
samples/MotionMark.SkiaNative.Avalonia/Controls/: MotionMarkSurface.cs
samples/MotionMark.SkiaNative.Avalonia/Rendering/: FrameStats.cs  MotionMarkScene.cs
samples/SkiaNative.Avalonia.Sample/: Program.cs  SkiaNative.Avalonia.Sample.csproj
src/SkiaNative.Avalonia/: GlobalUsings.cs  NativeLibraryResolver.cs  SkiaNative.Avalonia.csproj  SkiaNativeApplicationExtensions.cs  SkiaNativeFrameDiagnostics.cs  SkiaNativeOptions.cs  SkiaNativePlatform.cs
src/SkiaNative.Avalonia/Backend/: NativeDrawingContext.cs  NativeFramebufferRenderTarget.cs  NativeMetalRenderTarget.cs  NativePlatformRenderInterface.cs  NativeRenderInterfaceContext.cs
src/SkiaNative.Avalonia/Direct/: SkiaNativeDirectApi.cs
tests/SkiaNative.Avalonia.RenderTests/: AvaloniaUnitTestsNamespace.cs  CrossTestBase.cs  DirectFbCompositionTests.cs  DispatcherCompositorScheduler.cs  SkiaNative.Avalonia.RenderTests.csproj  TestBase.cs  TestRenderHelper.cs
tests/SkiaNative.Avalonia.Tests/: AbiTests.cs  RenderTestImageAssert.cs  RenderTests.cs  SkiaNative.Avalonia.Tests.csproj
(+15 files in other folders)
